- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.15.0
- 
        149c1dd07b54ee0c027d94a49d52160dc4f4e2ac (qt/qtdeclarative/dev), 7573e764f (tqtc/lts-5.15)
To reproduce, run attached example and use mouse wheel to start scrolling the view, then click the button at the bottom.
The example checks Loader state while it is being destroyed and there are a lot of items that are not ready when it is being destroyed. There is a lot of output like this when the crash occurs (up to 600):
qml: Warning: Loader destroyed before ready (index: 1) qml: Warning: Loader destroyed before ready (index: 2) qml: Warning: Loader destroyed before ready (index: 3) qml: Warning: Loader destroyed before ready (index: 4) qml: Warning: Loader destroyed before ready (index: 5) qml: Warning: Loader destroyed before ready (index: 6) qml: Warning: Loader destroyed before ready (index: 7) qml: Warning: Loader destroyed before ready (index: 8) qml: Warning: Loader destroyed before ready (index: 9) qml: Warning: Loader destroyed before ready (index: 10) qml: Warning: Loader destroyed before ready (index: 11) qml: Warning: Loader destroyed before ready (index: 12) qml: Warning: Loader destroyed before ready (index: 13) qml: Warning: Loader destroyed before ready (index: 14) qml: Warning: Loader destroyed before ready (index: 15)
| For Gerrit Dashboard: QTBUG-86255 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 312631,4 | Prevent crash when destroying asynchronous Loader | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 314787,1 | Prevent crash when destroying asynchronous Loader | 5.15 | qt/qtdeclarative | Status: ABANDONED | 0 | 0 | 
| 502751,3 | Prevent crash when destroying asynchronous Loader | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |